# enhigh-eda

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: .gitignore  interm.dvc  raw.dvc
data/interm/enigh/año_2024/: extracted.dvc
data/processed/enigh/año_2024/: .gitignore  0_indice_tablas_enigh2024_ns.parquet.dvc
data/raw/enigh/año_2024/: .gitignore  enigh_2024_raw.zip.dvc
docs/: _config.yml  about.md  index.md  info_enhigh.md  info_enigh.md  mkdocs.yml
docs/docs/: index.md
enhigh_eda/ingesta/: carga_enhigh.py  carga_enigh.py
enhigh_eda/procesamiento/: extrae_enhigh.py  extrae_enigh.py  procesa_enhigh.py  procesa_vivienda.py
references/: info_enhigh.md
